--- a/src/dlya_cafe_restoranov.html
+++ b/src/dlya_cafe_restoranov.html
@@ -103,7 +103,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="/index.html">ПРО НАС</a>
+                        <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
 
                     <li class="nav-item">
@@ -114,14 +114,14 @@
                                     НАПРЯМКИ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/dlya_magazinov_i_setey.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey.html">Для
                                             магазинів та
                                             торгівельних мереж</a></li>
-                                    <li><a class="dropdown-item" href="/dlya_cafe_restoranov.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov.html">Для
                                             кафе,
                                             ресторанів,
                                             офісів</a></li>
-                                    <li><a class="dropdown-item" href="/vending.html">Вендінг</a></li>
+                                    <li><a class="dropdown-item" href="./vending.html">Вендінг</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -135,13 +135,13 @@
                                     ОБЛАДНАННЯ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/avtomaty.html">Автомати, суперавтомати</a>
+                                    <li><a class="dropdown-item" href="./avtomaty.html">Автомати, суперавтомати</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="/postovie.html">Класичні постові
+                                    <li><a class="dropdown-item" href="./postovie.html">Класичні постові
                                             кавомашини</a></li>
-                                    <li><a class="dropdown-item" href="/kofemolki.html">Кавомолки професійні</a>
+                                    <li><a class="dropdown-item" href="./kofemolki.html">Кавомолки професійні</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="/vending_avtomaty.html">Вендінгові апарати</a></li>
+                                    <li><a class="dropdown-item" href="./vending_avtomaty.html">Вендінгові апарати</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -155,19 +155,19 @@
                                     ТОВАРИ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/zernovoy_kofe.html">Зернова кава</a></li>
-                                    <li><a class="dropdown-item" href="/moloko_shokolad.html">Капучино, шоколад,
+                                    <li><a class="dropdown-item" href="./zernovoy_kofe.html">Зернова кава</a></li>
+                                    <li><a class="dropdown-item" href="./moloko_shokolad.html">Капучино, шоколад,
                                             молоко</a></li>
-                                    <li><a class="dropdown-item" href="/syropi.html">Сиропи</a></li>
-                                    <li><a class="dropdown-item" href="/chay.html">Чай</a></li>
-                                    <li><a class="dropdown-item" href="/stakany.html">Стакани, цукор</a></li>
+                                    <li><a class="dropdown-item" href="./syropi.html">Сиропи</a></li>
+                                    <li><a class="dropdown-item" href="./chay.html">Чай</a></li>
+                                    <li><a class="dropdown-item" href="./stakany.html">Стакани, цукор</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
 
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="/contacty.html">КОНТАКТИ</a>
+                        <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТИ</a>
                     </li>
                 </ul>
             </div>
@@ -182,7 +182,7 @@
 
     <div class="banner">
         <div class="container">
-            <a><img src="/img/dlya_cafe_restoranov/classic_banner.webp" class="img-fluid" alt="banner"></a>
+            <a><img src="./img/dlya_cafe_restoranov/classic_banner.webp" class="img-fluid" alt="banner"></a>
         </div>
     </div>
 
@@ -193,7 +193,7 @@
             <div class="row">
                 <div class="col">
                     <div class="card text-center">
-                        <img src="/img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
+                        <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
                             <h5 class="fw-bold">Обладнання в аренду</h5>
                             <p class="card-text">Ми надаємо в оренду широкий вибір кавового обладнання.
@@ -352,37 +352,37 @@
             <div class="row">
                 <div class="col">
                     <div class="img-fluid p-1">
-                        <img src="/img/dlya_cafe_restoranov/full1.webp" class="img-thumbnail grayscale" alt="slide">
+                        <img src="./img/dlya_cafe_restoranov/full1.webp" class="img-thumbnail grayscale" alt="slide">
                     </div>
                 </div>
                 
                 <div class="col">
                     <div class="img-fluid p-1">
-                        <img src="/img/dlya_cafe_restoranov/full2.webp" class="img-thumbnail grayscale" alt="slide">
+                        <img src="./img/dlya_cafe_restoranov/full2.webp" class="img-thumbnail grayscale" alt="slide">
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="img-fluid p-1">
-                        <img src="/img/dlya_cafe_restoranov/full3.webp" class="img-thumbnail grayscale" alt="slide">
+                        <img src="./img/dlya_cafe_restoranov/full3.webp" class="img-thumbnail grayscale" alt="slide">
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="img-fluid p-1">
-                        <img src="/img/dlya_cafe_restoranov/full4.webp" class="img-thumbnail grayscale" alt="slide">
+                        <img src="./img/dlya_cafe_restoranov/full4.webp" class="img-thumbnail grayscale" alt="slide">
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="img-fluid p-1">
-                        <img src="/img/dlya_cafe_restoranov/full5.webp" class="img-thumbnail grayscale" alt="slide">
+                        <img src="./img/dlya_cafe_restoranov/full5.webp" class="img-thumbnail grayscale" alt="slide">
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="img-fluid p-1">
-                        <img src="/img/dlya_cafe_restoranov/full6.webp" class="img-thumbnail grayscale" alt="slide">
+                        <img src="./img/dlya_cafe_restoranov/full6.webp" class="img-thumbnail grayscale" alt="slide">
                     </div>
                 </div>
                 
