--- a/src/kofemolki.html
+++ b/src/kofemolki.html
@@ -103,7 +103,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="/index.html">ПРО НАС</a>
+                        <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
 
                     <li class="nav-item">
@@ -114,14 +114,14 @@
                                     НАПРЯМКИ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/dlya_magazinov_i_setey.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey.html">Для
                                             магазинів та
                                             торгівельних мереж</a></li>
-                                    <li><a class="dropdown-item" href="/dlya_cafe_restoranov.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov.html">Для
                                             кафе,
                                             ресторанів,
                                             офісів</a></li>
-                                    <li><a class="dropdown-item" href="/vending.html">Вендінг</a></li>
+                                    <li><a class="dropdown-item" href="./vending.html">Вендінг</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -135,13 +135,13 @@
                                     ОБЛАДНАННЯ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/avtomaty.html">Автомати, суперавтомати</a>
+                                    <li><a class="dropdown-item" href="./avtomaty.html">Автомати, суперавтомати</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="/postovie.html">Класичні постові
+                                    <li><a class="dropdown-item" href="./postovie.html">Класичні постові
                                             кавомашини</a></li>
-                                    <li><a class="dropdown-item" href="/kofemolki.html">Кавомолки професійні</a>
+                                    <li><a class="dropdown-item" href="./kofemolki.html">Кавомолки професійні</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="/vending_avtomaty.html">Вендінгові апарати</a>
+                                    <li><a class="dropdown-item" href="./vending_avtomaty.html">Вендінгові апарати</a>
                                     </li>
                                 </ul>
                             </li>
@@ -156,19 +156,19 @@
                                     ТОВАРИ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/zernovoy_kofe.html">Зернова кава</a></li>
-                                    <li><a class="dropdown-item" href="/moloko_shokolad.html">Капучино, шоколад,
+                                    <li><a class="dropdown-item" href="./zernovoy_kofe.html">Зернова кава</a></li>
+                                    <li><a class="dropdown-item" href="./moloko_shokolad.html">Капучино, шоколад,
                                             молоко</a></li>
-                                    <li><a class="dropdown-item" href="/syropi.html">Сиропи</a></li>
-                                    <li><a class="dropdown-item" href="/chay.html">Чай</a></li>
-                                    <li><a class="dropdown-item" href="/stakany.html">Стакани, цукор</a></li>
+                                    <li><a class="dropdown-item" href="./syropi.html">Сиропи</a></li>
+                                    <li><a class="dropdown-item" href="./chay.html">Чай</a></li>
+                                    <li><a class="dropdown-item" href="./stakany.html">Стакани, цукор</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
 
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="/contacty.html">КОНТАКТИ</a>
+                        <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТИ</a>
                     </li>
                 </ul>
             </div>
@@ -227,7 +227,7 @@
             <div class="col-md-5 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three"> 
-                        <img src="/img/kofemolki/full_n1N8k7Nw.webp" class="card-img-top img-fluid" style="max-width: 90%;"
+                        <img src="./img/kofemolki/full_n1N8k7Nw.webp" class="card-img-top img-fluid" style="max-width: 90%;"
                             alt="Fiorenzato F64E">
                         <figcaption>
                             <ul>
@@ -275,7 +275,7 @@
             <div class="col-md-5 mb-1">
                 <div class="card text hover-text-one">
                     <figure class="effect-text-three"> 
-                        <img src="/img/kofemolki/full_HeaIIsBn.webp" class="card-img-top img-fluid" style="max-width: 90%;"
+                        <img src="./img/kofemolki/full_HeaIIsBn.webp" class="card-img-top img-fluid" style="max-width: 90%;"
                         alt="Eureka Zenith 65E">
                         <figcaption>
                             <ul>
