--- a/src/vending.html
+++ b/src/vending.html
@@ -101,7 +101,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="/index.html">ПРО НАС</a>
+                        <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
 
                     <li class="nav-item">
@@ -112,14 +112,14 @@
                                     НАПРЯМКИ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/dlya_magazinov_i_setey.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey.html">Для
                                             магазинів та
                                             торгівельних мереж</a></li>
-                                    <li><a class="dropdown-item" href="/dlya_cafe_restoranov.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov.html">Для
                                             кафе,
                                             ресторанів,
                                             офісів</a></li>
-                                    <li><a class="dropdown-item" href="/vending.html">Вендінг</a></li>
+                                    <li><a class="dropdown-item" href="./vending.html">Вендінг</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -133,13 +133,13 @@
                                     ОБЛАДНАННЯ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/avtomaty.html">Автомати, суперавтомати</a>
+                                    <li><a class="dropdown-item" href="./avtomaty.html">Автомати, суперавтомати</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="/postovie.html">Класичні постові
+                                    <li><a class="dropdown-item" href="./postovie.html">Класичні постові
                                             кавомашини</a></li>
-                                    <li><a class="dropdown-item" href="/kofemolki.html">Кавомолки професійні</a>
+                                    <li><a class="dropdown-item" href="./kofemolki.html">Кавомолки професійні</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="/vending_avtomaty.html">Вендінгові апарати</a></li>
+                                    <li><a class="dropdown-item" href="./vending_avtomaty.html">Вендінгові апарати</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -153,19 +153,19 @@
                                     ТОВАРИ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/zernovoy_kofe.html">Зернова кава</a></li>
-                                    <li><a class="dropdown-item" href="/moloko_shokolad.html">Капучино, шоколад,
+                                    <li><a class="dropdown-item" href="./zernovoy_kofe.html">Зернова кава</a></li>
+                                    <li><a class="dropdown-item" href="./moloko_shokolad.html">Капучино, шоколад,
                                             молоко</a></li>
-                                    <li><a class="dropdown-item" href="/syropi.html">Сиропи</a></li>
-                                    <li><a class="dropdown-item" href="/chay.html">Чай</a></li>
-                                    <li><a class="dropdown-item" href="/stakany.html">Стакани, цукор</a></li>
+                                    <li><a class="dropdown-item" href="./syropi.html">Сиропи</a></li>
+                                    <li><a class="dropdown-item" href="./chay.html">Чай</a></li>
+                                    <li><a class="dropdown-item" href="./stakany.html">Стакани, цукор</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
 
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="/contacty.html">КОНТАКТИ</a>
+                        <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТИ</a>
                     </li>
                 </ul>
             </div>
@@ -180,7 +180,7 @@
 
     <div class="banner">
         <div class="container">
-            <a><img src="/img/vending/banner.webp" class="img-fluid" alt="banner"></a>
+            <a><img src="./img/vending/banner.webp" class="img-fluid" alt="banner"></a>
         </div>
     </div>
 
@@ -191,7 +191,7 @@
             <div class="row">
                 <div class="col">
                     <div class="card text-center">
-                        <img src="/img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
+                        <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
                             <h5 class="fw-bold">Встановлення кавомашин впродовж однієї доби <span class="select">
                                     *</span></h5>
@@ -257,7 +257,7 @@
     </div>
 
     <div class="container">
-        <a><img src="/img/vending/services.webp" class="img-fluid" alt="services"></a>
+        <a><img src="./img/vending/services.webp" class="img-fluid" alt="services"></a>
     </div>
 
     <div class="magazine container">
@@ -374,33 +374,33 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="3500">
-                            <img src="/img/vending/slider/slider.webp" class="d-block w-100 p-3" alt="coffemashine">
-                            <a href="/index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <img src="./img/vending/slider/slider.webp" class="d-block w-100 p-3" alt="coffemashine">
+                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
-                            <img src="/img/vending/slider/400_podp.webp" class="d-block w-100 p-3" alt="lei-400">
-                            <a href="/index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <img src="./img/vending/slider/400_podp.webp" class="d-block w-100 p-3" alt="lei-400">
+                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
-                            <img src="/img/vending/slider/500.webp" class="d-block w-100 p-3" alt="lei-500">
-                            <a href="/index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <img src="./img/vending/slider/500.webp" class="d-block w-100 p-3" alt="lei-500">
+                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
-                            <img src="/img/vending/slider/600_podp2.webp" class="d-block w-100 p-3" alt="lei-600">
-                            <a href="/index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <img src="./img/vending/slider/600_podp2.webp" class="d-block w-100 p-3" alt="lei-600">
+                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
-                            <img src="/img/vending/slider/600_sensor_podp.webp" class="d-block w-100 p-3"
+                            <img src="./img/vending/slider/600_sensor_podp.webp" class="d-block w-100 p-3"
                                 alt="lei-600sensor">
-                            <a href="/index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
-                            <img src="/img/vending/slider/700_podp.webp" class="d-block w-100 p-3" alt="lei-700">
-                            <a href="/index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <img src="./img/vending/slider/700_podp.webp" class="d-block w-100 p-3" alt="lei-700">
+                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
-                            <img src="/img/vending/slider/vista.webp" class="d-block w-100 p-3" alt="vista">
-                            <a href="/index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <img src="./img/vending/slider/vista.webp" class="d-block w-100 p-3" alt="vista">
+                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                     </div>
                 </div>
