--- a/src/vending_avtomaty.html
+++ b/src/vending_avtomaty.html
@@ -103,7 +103,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="/index.html">ПРО НАС</a>
+                        <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
 
                     <li class="nav-item">
@@ -114,14 +114,14 @@
                                     НАПРЯМКИ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/dlya_magazinov_i_setey.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey.html">Для
                                             магазинів та
                                             торгівельних мереж</a></li>
-                                    <li><a class="dropdown-item" href="/dlya_cafe_restoranov.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov.html">Для
                                             кафе,
                                             ресторанів,
                                             офісів</a></li>
-                                    <li><a class="dropdown-item" href="/vending.html">Вендінг</a></li>
+                                    <li><a class="dropdown-item" href="./vending.html">Вендінг</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -135,13 +135,13 @@
                                     ОБЛАДНАННЯ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/avtomaty.html">Автомати, суперавтомати</a>
+                                    <li><a class="dropdown-item" href="./avtomaty.html">Автомати, суперавтомати</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="/postovie.html">Класичні постові
+                                    <li><a class="dropdown-item" href="./postovie.html">Класичні постові
                                             кавомашини</a></li>
-                                    <li><a class="dropdown-item" href="/kofemolki.html">Кавомолки професійні</a>
+                                    <li><a class="dropdown-item" href="./kofemolki.html">Кавомолки професійні</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="/vending_avtomaty.html">Вендінгові апарати</a>
+                                    <li><a class="dropdown-item" href="./vending_avtomaty.html">Вендінгові апарати</a>
                                     </li>
                                 </ul>
                             </li>
@@ -156,19 +156,19 @@
                                     ТОВАРИ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/zernovoy_kofe.html">Зернова кава</a></li>
-                                    <li><a class="dropdown-item" href="/moloko_shokolad.html">Капучино, шоколад,
+                                    <li><a class="dropdown-item" href="./zernovoy_kofe.html">Зернова кава</a></li>
+                                    <li><a class="dropdown-item" href="./moloko_shokolad.html">Капучино, шоколад,
                                             молоко</a></li>
-                                    <li><a class="dropdown-item" href="/syropi.html">Сиропи</a></li>
-                                    <li><a class="dropdown-item" href="/chay.html">Чай</a></li>
-                                    <li><a class="dropdown-item" href="/stakany.html">Стакани, цукор</a></li>
+                                    <li><a class="dropdown-item" href="./syropi.html">Сиропи</a></li>
+                                    <li><a class="dropdown-item" href="./chay.html">Чай</a></li>
+                                    <li><a class="dropdown-item" href="./stakany.html">Стакани, цукор</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
 
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="/contacty.html">КОНТАКТИ</a>
+                        <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТИ</a>
                     </li>
                 </ul>
             </div>
@@ -223,7 +223,7 @@
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
 
-                        <img src="/img/vending_avtomaty/700.webp" class="card-img-top mt-3" alt="Bianchi LEI 700">
+                        <img src="./img/vending_avtomaty/700.webp" class="card-img-top mt-3" alt="Bianchi LEI 700">
                         <figcaption>
                             <ul class="lh-sm">
                                 <li><b>Габарити: <br> </b>Висота 1830 мм <br>Ширина 666 мм <br>Глибина 780 мм</li>
@@ -257,7 +257,7 @@
             <div class="col-md-4 mb-2 mt-2">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="/img/vending_avtomaty/600_sensor_otr.webp" class="card-img-top mt-3"
+                        <img src="./img/vending_avtomaty/600_sensor_otr.webp" class="card-img-top mt-3"
                             alt="Bianchi LEI 600 Smart">
                         <figcaption>
                             <ul class="lh-sm">
@@ -289,7 +289,7 @@
             <div class="col-md-4 mb-2 mt-2">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="/img/vending_avtomaty/600_touch1.webp" class="card-img-top mt-3"
+                        <img src="./img/vending_avtomaty/600_touch1.webp" class="card-img-top mt-3"
                             alt="Bianchi LEI 600 Touch">
                         <figcaption>
                             <ul class="lh-sm">
@@ -321,7 +321,7 @@
             <div class="col-md-4 mb-2 mt-2">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="/img/vending_avtomaty/400_otr.webp" class="card-img-top mt-3" alt="Bianchi LEI 400">
+                        <img src="./img/vending_avtomaty/400_otr.webp" class="card-img-top mt-3" alt="Bianchi LEI 400">
                         <figcaption>
                             <ul class="lh-sm">
                                 <li><b>32 символьний <br> алфавітно- <br> цифровий <br> LCD дисплей</b></li>
@@ -355,7 +355,7 @@
             <div class="col-md-4 mb-2 mt-2">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="/img/vending_avtomaty/400_smart.webp" class="card-img-top mt-3"
+                        <img src="./img/vending_avtomaty/400_smart.webp" class="card-img-top mt-3"
                             alt="Bianchi LEI 400 Smart">
                         <figcaption>
                             <ul class="lh-sm">
@@ -390,7 +390,7 @@
             <div class="col-md-4 mb-2 mt-2">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="/img/vending_avtomaty/LEI_500.webp" class="card-img-top mt-3" alt="Bianchi LEI 500 Touch">
+                        <img src="./img/vending_avtomaty/LEI_500.webp" class="card-img-top mt-3" alt="Bianchi LEI 500 Touch">
                         <figcaption>
                             <ul class="lh-sm">
                                 <li><b>Габарити: <br> </b>Висота 1830 мм <br>Ширина 666 мм <br>Глибина 766 мм</li>
@@ -422,7 +422,7 @@
             <div class="col-md-4 mb-2 mt-2">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="/img/vending_avtomaty/vit_OTR.webp" class="card-img-top mt-3" alt="Wittenborg 7600">
+                        <img src="./img/vending_avtomaty/vit_OTR.webp" class="card-img-top mt-3" alt="Wittenborg 7600">
                         <figcaption>
                             <ul class="lh-sm">
                                 <li><b>Габарити: <br> </b>Висота 1830 мм <br>Ширина 700 мм <br>Глибина 620 мм</li>
@@ -455,7 +455,7 @@
             <div class="col-md-4 mb-2 mt-2">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="/img/vending_avtomaty/Vista M_otr.webp" class="card-img-top mt-3" alt="Bianchi Vista M">
+                        <img src="./img/vending_avtomaty/Vista M_otr.webp" class="card-img-top mt-3" alt="Bianchi Vista M">
                         <figcaption>
                             <ul>
                                 <li><b>Панель вибору<br>з 12 кнопками</b></li>
@@ -493,7 +493,7 @@
             <div class="col-md-4 mb-2 mt-2">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="/img/vending_avtomaty/Vista_M_sparka.webp" class="combo card-img-top mt-3"
+                        <img src="./img/vending_avtomaty/Vista_M_sparka.webp" class="combo card-img-top mt-3"
                         alt="Bianchi Vista M + кавова вендінг машина">
                         <figcaption>
                             <ul>
